--- a/style.css
+++ b/style.css
@@ -39,3 +39,11 @@ body {
     padding-top: 5px;
     font-size: 16px;
 }
+
+#sponsor1 {
+    display: inline-block;
+}
+
+#sponsor2 {
+    display: inline-block;
+}
