included bg image in assets folder and fixed html

--- a/style.css
+++ b/style.css
@@ -2,6 +2,10 @@ body {
     font-family: sans-serif;
 }
 
+#cover-page {
+    background-image: url();
+}
+
 #countdown {
     text-align: center;
     font-family: sans-serif;
