--- a/style.css
+++ b/style.css
@@ -3,7 +3,13 @@ body {
 }
 
 #cover-page {
-    background-image: url();
+    background-image: url(assets/main-bg.png);
+}
+
+#titles {
+    display: block;
+    text-align: center;
+    color: white;
 }
 
 #countdown {
