--- a/style.css
+++ b/style.css
@@ -65,6 +65,13 @@ body {
     padding-top: 100px;
 }
 
+.theme-cards {
+    background-color: #F7F3EB;
+    box-shadow: 0px 3px 5px rgb(200, 199, 199);
+    border: none;
+    border-radius: 15px;
+}
+
 .get-involved-cards {
     background-color: #F0FCFF;
     box-shadow: 0px 3px 5px rgb(200, 199, 199);
