--- a/style.css
+++ b/style.css
@@ -8,16 +8,14 @@ body {
     background-size: cover;
     background-position: center;
     position: relative;
-}
-
-#navbar-color {
-    color: white;
+    margin-top: -50px;
 }
 
 #titles {
     display: block;
     text-align: center;
     color: white;
+    line-height: 40px;
 }
 
 #other-pages {
@@ -113,4 +111,18 @@ body {
 
 #sponsor2 {
     display: inline-block;
+}
+
+.nav-link {
+    color: white;
+}
+
+.navbar {
+    padding-top: 0 !important;
+    padding-bottom: 0 !important;
+    min-height: 40px !important;
+}
+
+#mlh {
+    z-index: 1;
 }
