--- a/style.css
+++ b/style.css
@@ -25,12 +25,15 @@ body {
 #countdown {
     text-align: center;
     font-family: sans-serif;
-    padding-bottom: 10px;
+    padding-top: 150px;
+    padding-bottom: 150px;
+    color: white;
+    font-size: x-large;
 }
 
 #cd-header {
     font-weight: 100;
-    font-size: 40px;
+    font-size: 60px;
     margin: 0px 0px 10px;
     padding-top: 80px;
 }
@@ -53,10 +56,14 @@ body {
     padding: 15px;
     border-radius: 3px;
     display: inline-block;
+    padding-bottom: 0;
+    font-weight: bold;
+    font-size: larger;
 }
 
 .smalltext {
     font-size: 16px;
+    border-top: 3px solid white;
 }
 
 .section-padding {
