--- a/style.css
+++ b/style.css
@@ -10,10 +10,6 @@ body {
     position: relative;
 }
 
-#navbar-text {
-    color: white;
-}
-
 #titles {
     display: block;
     text-align: center;
@@ -70,6 +66,13 @@ body {
     box-shadow: 0px 3px 5px rgb(200, 199, 199);
     border: none;
     border-radius: 15px;
+}
+
+#byte-involved {
+    position: absolute;
+    left: 130px;
+    max-width: 15%;
+    height: auto;
 }
 
 .get-involved-cards {
