--- a/style.css
+++ b/style.css
@@ -17,6 +17,47 @@ body {
     line-height: 40px;
 }
 
+#register-btn {
+    border-radius: 30px;
+    border: none;
+    padding: 15px 25px;
+    font-size: 25px;
+    width: 200px;
+    transition: all 0.5s;
+    margin: 5px;
+}
+
+#register-btn span {
+    cursor: pointer;
+    display: inline-block;
+    position: relative;
+    transition: 0.1s;
+}
+
+#register-btn span:after {
+    content: '\00bb';
+    position: absolute;
+    opacity: 0;
+    top: 0;
+    right: -20px;
+    transition: 0.1s;
+}
+
+#register-btn:hover {
+    background-color: rgb(113, 180, 249);
+    color: white;
+    box-shadow: 0 12px 16px 0 rgba(0, 0, 0, 0.24), 0 17px 50px 0 rgba(0, 0, 0, 0.19);
+}
+
+#register-btn:hover span {
+    padding-right: 25px;
+}
+
+#register-btn:hover span:after {
+    opacity: 1;
+    right: 0;
+}
+
 #other-pages {
     background-image: linear-gradient(#325981, #ABE2F1, #F7F3EB);
 }
