--- a/style.css
+++ b/style.css
@@ -64,7 +64,7 @@ body {
 
 #countdown {
     text-align: center;
-    font-family: sans-serif;
+    font-family: Raleway;
     padding-top: 150px;
     padding-bottom: 150px;
     color: white;
