--- a/style.css
+++ b/style.css
@@ -137,6 +137,15 @@ body {
     height: auto;
 }
 
+#flying-dino {
+    max-width: 20%;
+    height: auto;
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+    padding-bottom: 90px;
+}
+
 .get-involved-cards {
     background-color: #F0FCFF;
     box-shadow: 0px 3px 5px rgb(200, 199, 199);
