--- a/style.css
+++ b/style.css
@@ -146,6 +146,17 @@ body {
     padding-bottom: 90px;
 }
 
+#dino-prints {
+    position: absolute;
+    right: 10rem;
+    max-width: 20%;
+    height: auto;
+}
+
+#prints {
+    padding-bottom: 50px;
+}
+
 .get-involved-cards {
     background-color: #F0FCFF;
     box-shadow: 0px 3px 5px rgb(200, 199, 199);
