--- a/style.css
+++ b/style.css
@@ -107,7 +107,7 @@ body {
 }
 
 .section-padding {
-    padding-top: 100px;
+    padding-top: 70px;
 }
 
 .theme-cards {
@@ -115,6 +115,20 @@ body {
     box-shadow: 0px 3px 5px rgb(200, 199, 199);
     border: none;
     border-radius: 15px;
+}
+
+#fly-dino {
+    position: relative;
+    max-width: 10%;
+    height: auto;
+    left: 45rem;
+}
+
+#d-on-ice {
+    position: relative;
+    max-width: 25%;
+    height: auto;
+    left: 67rem;
 }
 
 #get-involved-words {
@@ -127,7 +141,7 @@ body {
 #byte-involved {
     position: absolute;
     left: 10rem;
-    max-width: 20%;
+    max-width: 18%;
     height: auto;
 }
 
