--- a/style.css
+++ b/style.css
@@ -339,3 +339,48 @@ body {
     top: 0px;
     right: 0px;
 }
+
+@media only screen and (max-width: 600px) {
+    #titles {
+        padding-right: 10px;
+        padding-left: 10px;
+        line-height: 30px;
+        width: 450px;
+    }
+
+    #cd-header {
+        font-size: 2em;
+    }
+}
+
+@media only screen and (min-width: 600px) {
+    #titles {
+        padding-right: 30px;
+        padding-left: 30px;
+        width: 550px;
+        line-height: 30px;
+    }
+
+    #cd-header {
+        font-size: 2em;
+    }
+}
+
+@media only screen and (min-width: 768px) {
+    #titles {
+        padding-right: 30px;
+        padding-left: 30px;
+        width: 600px;
+        line-height: 30px;
+    }
+
+
+
+    #cd-header {
+        font-size: 2em;
+    }
+}
+
+@media only screen and (min-width: 992px) {}
+
+@media only screen and (min-width: 1200px) {}
