--- a/style.css
+++ b/style.css
@@ -384,3 +384,15 @@ body {
 @media only screen and (min-width: 992px) {}
 
 @media only screen and (min-width: 1200px) {}
+
+@media screen and (max-width: 1000px) {
+    .responsive-cards {
+        padding-bottom: 1rem;
+    }
+}
+
+@media screen and (max-width: 800px) {
+    .responsive-faq {
+        width: 75%;
+    }
+}
