--- a/style.css
+++ b/style.css
@@ -340,6 +340,13 @@ body {
     right: 0px;
 }
 
+#carousel {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    border: red;
+}
+
 @media only screen and (max-width: 600px) {
     #titles {
         padding-right: 10px;
