--- a/style.css
+++ b/style.css
@@ -116,7 +116,17 @@ body {
     padding-top: 70px;
 }
 
+.about-cards {
+    font-family: Raleway;
+    background-color: #F7F3EB;
+    box-shadow: 0px 3px 5px rgb(200, 199, 199);
+    border: none;
+    border-radius: 15px;
+}
+
+
 .theme-cards {
+    font-family: Raleway;
     background-color: #F7F3EB;
     box-shadow: 0px 3px 5px rgb(200, 199, 199);
     border: none;
@@ -352,13 +362,27 @@ body {
         font-size: 2em;
     }
 
+    .about-cards {
+        padding-right: 30px;
+        padding-left: 20px;
+        width: 400px;
+        margin: 50px;
+    }
+    .theme-cards {
+        padding-right: 30px;
+        padding-left: 20px;
+        width: 450px;
+        margin: 30px;
+
 }
+}
+
 
 @media only screen and (min-width: 600px) {
     #titles {
         padding-right: 30px;
         padding-left: 30px;
-        width: 550px;
+        width: 50px;
         line-height: 30px;
     }
 
@@ -366,6 +390,36 @@ body {
         font-size: 2em;
     }
 }
+
+@media (max-width: 1087px){
+    .about-cards {
+        padding-right: 30px;
+        padding-left: 20px;
+        width: 450px;
+        margin: 50px;
+    }
+    .theme-cards {
+        padding-right: 30px;
+        padding-left: 20px;
+        width: 600px;
+        margin: 30px;
+    }
+}
+
+@media (max-width: 480px) and (min-width: 200px){
+     .about-cards {
+         padding-right: 5px;
+         padding-left: 5px;
+         width: 300px;
+         margin: 50px;
+     }
+     .theme-cards {
+         padding-right: 5px;
+         padding-left: 5px;
+         width: 340px;
+         margin: 25px;
+     }
+ }
 
 @media only screen and (min-width: 768px) {
     #titles {
@@ -394,8 +448,8 @@ body {
 body{
     background: #fcfcfc;
     font-family: sans-serif;
-}/*
-footer{
+}
+/*footer{
     position: static;
     bottom: 0;
     left: 0;
@@ -462,11 +516,11 @@ footer{
     background: #45B8CF;
     width: 100vw;
     padding: 20px;
-    padding-bottom: 40px;
+    padding-bottom: 45px;
     text-align: center;
 }
 .footer-bottom p{
-float: left;
+    float: left;
     font-size: 14px;
     word-spacing: 2px;
     text-transform: capitalize;
@@ -503,8 +557,35 @@ display: block;
       
 @media (max-width:500px) {
     .footer-menu ul{
-    display: flex;
+    display: static;
     margin-top: 10px;
     margin-bottom: 20px;
+    }
+    .footer-bottom p{
+        font-size: 12px;
+    }
+
+    .footer-bottom p a{
+        font-size: 14px;
+    }
+
+    .socials li{
+        margin: 0 5px;
+    }
+    .socials a{
+        padding: 3px;    
+    }
+    .socials a i{
+        font-size: 1.1rem;
+    
+    }
+    .footer-menu ul li{
+        padding-right: 1px;
+    }
+}
+@media (max-width: 395px) {
+    .footer-bottom{
+        padding: 20px;
+        padding-bottom: 80px;
     }
 }
